--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
-version: '1'
+version: '3'
 services:
-  server:
+  web:
     image: httpd
-    expose:
-      port: 8081:80
+    ports:
+      - "80:80"
+
